--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./css/responsive.css">
   <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
   
-  <title>Document</title>
+  <link rel="icon" href="/img/tftactics.png">
+  <title>TFT Database, Champions, Tier List - TFTACTICS.GG</title>
 </head>
 <body>
   <div class="app">
