--- a/index.html
+++ b/index.html
@@ -292,24 +292,24 @@
                 </div>
                 <div class="col l-3 m-12 c-12 list-tables">
                   <div class="table">
-                    <h4>Board Tracker</h4>
+                    <h4>Champion Stats</h4>
                     <div class="divider"></div>
-                    <p>Easily keep track of your own board as the game evolves and pin a final team composition.</p>
+                    <p>Full stats for every level including damage, abilities, range, and other key statistics.</p>
                   </div>
                 </div>
                 <div class="col l-3 m-12 c-12 list-tables">
                   <div class="table">
-                    <h4>Board Tracker</h4>
+                    <h4>Round Tracker</h4>
                     <div class="divider"></div>
-                    <p>Easily keep track of your own board as the game evolves and pin a final team composition.</p>
+                    <p>Check your win/loss ratio and performance against specific opponents every match.</p>
                   </div>
                   
                 </div>
                 <div class="col l-3 m-12 c-12 list-tables">
                   <div class="table">
-                    <h4>Board Tracker</h4>
+                    <h4>Patch Notes</h4>
                     <div class="divider"></div>
-                    <p>Easily keep track of your own board as the game evolves and pin a final team composition.</p>
+                    <p>Stay up to date with the ever changing meta with fully detailed patch notes.</p>
                   </div>
                 </div>
               </div>
